--- a/src/sc-core/Cargo.toml
+++ b/src/sc-core/Cargo.toml
@@ -14,6 +14,7 @@ chashmap = "2.2.0"
 base64 = "0.11.0"
 regex = "1.3.1"
 async-trait = "0.1.21"
+async-lock = "1.1.2"
 flv-util = { version = "0.2.0"}
 flv-future-aio = { version = "2.2.1", features =["tls"] }
 k8-metadata-client = { version = "1.0.1"}
