--- a/src/sc-core/Cargo.toml
+++ b/src/sc-core/Cargo.toml
@@ -16,7 +16,7 @@ regex = "1.3.1"
 async-trait = "0.1.21"
 async-lock = "1.1.2"
 flv-util = { version = "0.2.0"}
-flv-future-aio = { version = "2.2.1", features =["tls"] }
+flv-future-aio = { version = "2.3.0", features =["tls","unstable"] }
 k8-metadata-client = { version = "1.0.1"}
 flv-types = { path ="../types", version = "0.2.0"}
 utils = { path = "../utils"}
@@ -29,5 +29,5 @@ flv-metadata = { path = "../metadata"}
 sc-api = { version = "2.0.0", path = "../sc-api",  package = "flv-api-sc"}
 
 [dev-dependencies]
-flv-future-aio = { version = "2.2.1", features=["fixture"]}
+flv-future-aio = { version = "2.3.0", features=["fixture"]}
 flv-util = { version = "0.2.0", features=["fixture"]}
