--- a/src/sc-core/Cargo.toml
+++ b/src/sc-core/Cargo.toml
@@ -15,6 +15,7 @@ base64 = "0.11.0"
 regex = "1.3.1"
 async-trait = "0.1.21"
 async-lock = "1.1.2"
+event-listener = "2.0.0"
 tokio = { version = "0.2.21", features = ["macros"] }
 flv-util = { version = "0.2.0"}
 flv-future-aio = { version = "2.3.0", features =["tls","unstable"] }
