--- a/src/k8-metadata/Cargo.toml
+++ b/src/k8-metadata/Cargo.toml
@@ -10,10 +10,15 @@ license = "Apache-2.0"
 [lib]
 name = "k8_metadata"
 
+[features]
+kf = ["flv-metadata"]
+
 [dependencies]
 log = "0.4.8"
-
+serde = { version ="1.0.103", features = ['derive'] }
+serde_json = "1.0.27"
 k8-obj-metadata = { version = "1.0.0"}
 k8-obj-core = { version = "1.1.0"}
 k8-obj-app = { version = "1.1.0" }
-
+flv-types = { version = "0.2.0", path ="../types" }
+flv-metadata = { version = "2.0.0", path = "../metadata", optional = true }
