--- a/src/metadata/Cargo.toml
+++ b/src/metadata/Cargo.toml
@@ -9,10 +9,14 @@ license = "Apache-2.0"
 
 [features]
 use_serde = ["serde"]
+k8 = ["serde","k8-obj-metadata","k8-obj-core","k8-obj-app"]
 
 [dependencies]
 log = "0.4.8"
 serde = { version ="1.0.0", features = ['derive'], optional = true }
+k8-obj-metadata = { version = "1.0.0", optional = true }
+k8-obj-core = { version = "1.1.0", optional = true}
+k8-obj-app = { version = "1.1.0", optional = true }
 kf-protocol =  "2.0.0" 
 flv-types = { path ="../types", version = "0.2.0" }
 flv-util = { version = "0.2.0"}
