--- a/src/sc-core/Cargo.toml
+++ b/src/sc-core/Cargo.toml
@@ -26,8 +26,7 @@ kf-protocol = { version = "2.0.0" }
 kf-socket = {path = "../kf-socket"}
 kf-service = { path = "../kf-service"}
 internal-api = { path = "../internal-api"}
-k8-flv-metadata = { version = "2.0.0", path = "../k8-metadata"}
-flv-metadata = { path = "../metadata"}
+flv-metadata = { features = ["k8"],path = "../metadata"}
 sc-api = { version = "2.0.0", path = "../sc-api",  package = "flv-api-sc"}
 
 [dev-dependencies]
