--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -25,11 +25,15 @@ serde_yaml =  "0.8.8"
 async-trait = "0.1.21"
 ctrlc = "3.1.3"
 futures = { version = "0.3.4", features = ['async-await'] }
-
+flv-future-aio = { version = "2.2.1" }
 flv-client = { path = "../client-rs"}
-k8-client = { version = "1.1.1"}
+k8-client = { version = "1.1.0"}
+k8-config = { version = "1.1.0", features = ["context"]}
 k8-obj-core = { version = "1.1.0"}
+k8-obj-metadata = { version = "1.0.0"}
+k8-metadata-client = { version = "1.0.0"}
 utils = { path= "../utils"}
+flv-types = { path ="../types", version = "0.2.0" }
 
 
 
