--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -26,7 +26,9 @@ async-trait = "0.1.21"
 ctrlc = "3.1.3"
 futures = { version = "0.3.4", features = ['async-await'] }
 flv-future-aio = { version = "2.2.1" }
+flv-util = { version = "0.2.0"}
 flv-client = { path = "../client-rs"}
+flv-metadata = { path = "../metadata", features = ["use_serde"]}
 k8-client = { version = "1.1.0"}
 k8-config = { version = "1.1.0", features = ["context"]}
 k8-obj-core = { version = "1.1.0"}
