--- a/src/sc-core/Cargo.toml
+++ b/src/sc-core/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "0.2.21", features = ["macros"] }
 flv-util = { version = "0.2.0"}
 flv-future-aio = { version = "2.3.0", features =["tls","unstable"] }
 k8-metadata-client = { version = "1.0.1"}
+k8-obj-metadata = { version = "1.0.0" }
 flv-types = { path ="../types", version = "0.2.0"}
 utils = { path = "../utils"}
 kf-protocol = { version = "2.0.0" } 
