--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -29,6 +29,7 @@ flv-future-aio = { version = "2.2.1" }
 flv-util = { version = "0.2.0"}
 flv-client = { path = "../client-rs"}
 flv-metadata = { path = "../metadata", features = ["use_serde"]}
+flv-api-sc = { version = "2.0.0", path = "../sc-api", features = ["use_serde"]}
 k8-client = { version = "1.1.0"}
 k8-config = { version = "1.1.0", features = ["context"]}
 k8-obj-core = { version = "1.1.0"}
