--- a/src/client-rs/Cargo.toml
+++ b/src/client-rs/Cargo.toml
@@ -24,5 +24,5 @@ kf-protocol = { version = "2.0.0" }
 flv-types = { version = "0.2.0", path ="../types" }
 flv-util = "0.2.0"
 kf-socket = { version = "2.1.0", path = "../kf-socket" }
-sc-api = { version = "2.0.0", path = "../sc-api", default-features=false, package = "flv-api-sc"}
+flv-api-sc = { version = "2.0.0", path = "../sc-api", default-features=false}
 spu-api = { version = "2.0.0", path = "../spu-api", package = "flv-api-spu"}
