--- a/src/sc-k8/Cargo.toml
+++ b/src/sc-k8/Cargo.toml
@@ -16,6 +16,7 @@ toml = "0.5.5"
 structopt = "0.3.12"
 serde = { version ="1.0.103", features = ['derive'] }
 futures = { version = "0.3.4" }
+async-trait = "0.1.21"
 k8-client = { version = "1.1.1"}
 flv-tls-proxy = "0.1.0"
 flv-types = { path ="../types", version = "0.2.0"}
