--- a/src/metadata/Cargo.toml
+++ b/src/metadata/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version ="1.0.0", features = ['derive'], optional = true }
 k8-obj-metadata = { version = "1.0.0", optional = true }
 k8-obj-core = { version = "1.1.0", optional = true}
 k8-obj-app = { version = "1.1.0", optional = true }
+flv-future-aio = { version = "2.3.0"}
 kf-protocol =  "2.0.0" 
 flv-types = { path ="../types", version = "0.2.0" }
 flv-util = { version = "0.2.0"}
