--- a/.github/workflows/publish_nightly_docker.yml
+++ b/.github/workflows/publish_nightly_docker.yml
@@ -14,13 +14,11 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - name: Install Musl Tools
-        run: |
-          sudo apt install -y musl-tools
-          sudo ln -s /usr/bin/musl-gcc /usr/local/bin/x86_64-linux-musl-gcc
-          export TARGET_CC=musl-gcc
+      - name: Install Clang
+        run: sudo apt install -y clang-10
       - name: Login to Docker Hub
         run: docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
       - name: Publish nightly development Fluvio Image
-        run: |
-          make nightly_image
+        run: make nightly_image
+        env:
+          TARGET_CC: clang
