--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
           override: true
       - name: check clippy
         run: make check-clippy RUSTV=${{ matrix.rust }}
+
   check_fmt:
     name: check cargo fmt
     runs-on: ${{ matrix.os }}
@@ -78,7 +79,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest]
         rust: [stable]
-
     steps:
       - uses: actions/checkout@v2
       - name: Install ${{ matrix.rust }}
@@ -95,36 +95,26 @@ jobs:
 
   local_cluster_test:
     name: Local cluster test
-    runs-on: ${{ matrix.os }}
+    runs-on: [self-hosted, '${{ matrix.os }}']
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-bionic]
         rust: [stable]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Install Helm
-        run: dev-tools/ci-replace-helm.sh
-        env:
-          HELM_VERSION: v3.3.4
-          OS: ${{ matrix.os }}
       - run: helm version
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
           override: true
-      - name: Install Minikube on Linux
-        if: startsWith(matrix.os,'ubuntu')
-        run: |
-          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube-linux-amd64 /usr/local/bin/minikube
       - name: Install Minikube on Mac
         if: startsWith(matrix.os, 'macOS')
         run:  brew install minikube
       - name: Setup Minikube for Linux
         if: startsWith(matrix.os, 'ubuntu')
         run: |  
+          minikube delete
           minikube start --driver=docker
       - name: Setup Minikube for Mac
         if: startsWith(matrix.os, 'macOS')
@@ -139,57 +129,41 @@ jobs:
       - name: Setup installation pre-requisites
         run: |
           FLV_CMD=true ./target/debug/fluvio cluster install --local --setup
-      # - name: Setup tmate session
-      #  uses: mxschmitt/action-tmate@v3
-      - name: smoke test tls
-        #run: |
-        #  FLV_CMD=true  FLV_SOCKET_WAIT=600 make UNINSTALL=noclean smoke-test-tls-root
+      - name: Run smoke-test-tls
         run: |
-          FLV_CMD=true FLV_SOCKET_WAIT=600 make UNINSTALL=noclean smoke-test
+          FLV_CMD=true FLV_SOCKET_WAIT=600 make UNINSTALL=noclean smoke-test-tls
       - name: Upload logs on Linux
-        if: startsWith(matrix.os,'ubuntu') && failure()
+        if: startsWith(matrix.os, 'ubuntu') && failure()
         uses: actions/upload-artifact@v2
         with:
           name: fluvio-sc-logs
           path: /tmp/flv_sc.log
       - name: Upload logs on Mac
-        if: startsWith(matrix.os,'macOS') && failure()
+        if: startsWith(matrix.os, 'macOS') && failure()
         uses: actions/upload-artifact@v2
         with:
           name: fluvio-sc-logs
           path: /usr/local/var/log/fluvio/flv_sc.log
 
-
-
   k8_cluster_test:
     name: Kubernetes cluster test
-    runs-on: ${{ matrix.os }}
+    runs-on: [self-hosted, '${{ matrix.os }}']
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-bionic]
         rust: [stable]
-    
     steps:
       - uses: actions/checkout@v2
-      - name: Install Helm
-        run: dev-tools/ci-replace-helm.sh
-        env:
-          HELM_VERSION: v3.3.4
-          OS: ${{ matrix.os }}
       - run: helm version
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
           override: true
-      - name: Install Minikube on Linux
-        if: startsWith(matrix.os,'ubuntu')
-        run: |
-          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube-linux-amd64 /usr/local/bin/minikube
       - name: Setup Minikube for Linux
         if: startsWith(matrix.os, 'ubuntu')
         run: |  
+          minikube delete
           minikube start --driver=docker
       - name: Test minikube
         run: |
@@ -201,15 +175,9 @@ jobs:
       - name: Setup installation pre-requisites 
         run: |
           FLV_CMD=true ./target/debug/fluvio cluster install --setup --develop
-      - name: Install musl-tools for Linux
-        run: |
-          sudo apt install -y musl-tools
-          sudo ln -s /usr/bin/musl-gcc /usr/local/bin/x86_64-linux-musl-gcc
-      - name: smoke test k8 tls
-      #  run: | 
-      #    FLV_CMD=true  FLV_SOCKET_WAIT=600 make RELEASE=true UNINSTALL=noclean smoke-test-k8-tls-root
+      - name: smoke-test-k8-tls
         run:  |
-          FLV_CMD=true FLV_SOCKET_WAIT=600 make UNINSTALL=noclean smoke-test-k8
+          FLV_CMD=true FLV_SOCKET_WAIT=600 make UNINSTALL=noclean smoke-test-k8-tls
       - name: Save logs
         if: failure()
         run: kubectl logs flv-sc > /tmp/flv_sc.log
