--- a/.github/workflows/ci_ng.yml
+++ b/.github/workflows/ci_ng.yml
@@ -24,19 +24,19 @@ jobs:
     steps:
     - run: ssh-keygen -t RSA -f id_rsa
     - run: aws ec2 import-key-pair --key-name fluvio-ci-$GITHUB_RUN_ID --public-key-material fileb://id_rsa.pub
-    - run: >
-        aws ec2 run-instances
-          --image-id ami-0a0ceb201e79c7120
-          --instance-type m5.2xlarge
-          --security-group-ids sg-010f0a9ee7ddac50f
-          --key-name fluvio-ci-$GITHUB_RUN_ID
-          --query "Reservations[0].Instances[0].InstanceId"
-          --output text >> ec2_instance_id &&
-        sleep 5 &&
-        aws ec2 describe-instances
-          --instance-ids i-0d7a4ebb0738c3468
-          --query "Reservations[0].Instances[0].PublicIpAddress"
-          --output text >> ec2_instance_public_ip &&
+    - run: |
+        aws ec2 run-instances \
+          --image-id ami-0a0ceb201e79c7120 \
+          --instance-type m5.2xlarge \
+          --security-group-ids sg-010f0a9ee7ddac50f \
+          --key-name fluvio-ci-$GITHUB_RUN_ID \
+          --query "Reservations[0].Instances[0].InstanceId" \
+          --output text >> ec2_instance_id && \
+        sleep 5 && \
+        aws ec2 describe-instances \
+          --instance-ids i-0d7a4ebb0738c3468 \
+          --query "Reservations[0].Instances[0].PublicIpAddress" \
+          --output text >> ec2_instance_public_ip && \
         echo "SSH_REMOTE="ubuntu@$(cat ec2_instance_public_ip) >> $GITHUB_ENV
     - run: ssh $SSH_REMOTE 'echo test'
     - run: ssh $SSH_REMOTE 'git clone https://github.com/infinyon/fluvio.git --depth 1'
