--- a/.github/workflows/ci_ng.yml
+++ b/.github/workflows/ci_ng.yml
@@ -39,8 +39,8 @@ jobs:
           --instance-ids i-0d7a4ebb0738c3468 \
           --query "Reservations[0].Instances[0].PublicIpAddress" \
           --output text >> ec2_instance_public_ip && \
-        echo "SSH_REMOTE="ubuntu@$(cat ec2_instance_public_ip) >> $GITHUB_ENV
-    - run: ssh $SSH_REMOTE 'echo test'
-    - run: ssh $SSH_REMOTE 'git clone https://github.com/infinyon/fluvio.git --depth 1'
+        echo "SSH_ARGS="ubuntu@$(cat ec2_instance_public_ip) -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" >> $GITHUB_ENV
+    - run: ssh $SSH_ARGS 'echo test'
+    - run: ssh $SSH_ARGS 'git clone https://github.com/infinyon/fluvio.git --depth 1'
     - if: always()
       run: aws ec2 terminate-instances --instance-ids $(cat ec2_instance_id)
