--- a/.github/workflows/ci_ng.yml
+++ b/.github/workflows/ci_ng.yml
@@ -33,13 +33,13 @@ jobs:
           --security-group-ids sg-010f0a9ee7ddac50f \
           --key-name fluvio-ci-$GITHUB_RUN_ID \
           --query "Reservations[0].Instances[0].InstanceId" \
-          --output text >> ec2_instance_id && \
+          --output text > ec2_instance_id && \
         sleep 5 && \
         aws ec2 describe-instances \
           --instance-ids i-0d7a4ebb0738c3468 \
           --query "Reservations[0].Instances[0].PublicIpAddress" \
-          --output text >> ec2_instance_public_ip && \
-        echo "SSH_ARGS="ubuntu@$(cat ec2_instance_public_ip) -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" >> $GITHUB_ENV
+          --output text > ec2_instance_public_ip
+    - run: echo "SSH_ARGS="-o BatchMode=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@$(cat ec2_instance_public_ip)" >> $GITHUB_ENV
     - run: ssh $SSH_ARGS 'echo test'
     - run: ssh $SSH_ARGS 'git clone https://github.com/infinyon/fluvio.git --depth 1'
     - if: always()
