--- a/.github/workflows/ci_ng.yml
+++ b/.github/workflows/ci_ng.yml
@@ -33,14 +33,17 @@ jobs:
           --security-group-ids sg-010f0a9ee7ddac50f \
           --key-name fluvio-ci-$GITHUB_RUN_ID \
           --query "Instances[0].InstanceId" \
-          --output text > ec2_instance_id && \
-        sleep 60 && \
+          --output text > ec2_instance_id
+    - run: cat ec2_instance_id
+    - run: sleep 60
+    - run: |
         aws ec2 describe-instances \
           --instance-ids $(cat ec2_instance_id) \
           --query "Reservations[0].Instances[0].PublicIpAddress" \
           --output text > ec2_instance_public_ip
     - run: cat ec2_instance_public_ip
     - run: echo 'SSH_ARGS="-o BatchMode=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ubuntu@$(cat ec2_instance_public_ip)"' >> $GITHUB_ENV
+    - run: echo $SSH_ARGS
     - run: ssh $SSH_ARGS 'echo test'
     - run: ssh $SSH_ARGS 'git clone https://github.com/infinyon/fluvio.git --depth 1'
     - if: always()
