--- a/.github/workflows/ci_ng.yml
+++ b/.github/workflows/ci_ng.yml
@@ -24,29 +24,8 @@ jobs:
       AWS_DEFAULT_REGION: us-east-2
       EC2_AMI: ami-0a3bb968cc36aa314
     steps:
-    - run: ssh-keygen -t RSA -f id_rsa
-    - run: aws ec2 import-key-pair --key-name fluvio-ci-$GITHUB_RUN_ID --public-key-material fileb://id_rsa.pub
-    - run: |
-        aws ec2 run-instances \
-          --image-id $EC2_AMI \
-          --instance-type m5.2xlarge \
-          --security-group-ids sg-010f0a9ee7ddac50f \
-          --key-name fluvio-ci-$GITHUB_RUN_ID \
-          --query "Instances[0].InstanceId" \
-          --output text > ec2_instance_id
-    - run: cat ec2_instance_id
-    - run: sleep 60
-    - run: |
-        aws ec2 describe-instances \
-          --instance-ids $(cat ec2_instance_id) \
-          --query "Reservations[0].Instances[0].PublicIpAddress" \
-          --output text > ec2_instance_public_ip
-    - run: cat ec2_instance_public_ip
-    - run: echo "SSH_OPTS=-o BatchMode=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" >> $GITHUB_ENV
-    - run: echo "SSH_REMOTE=ubuntu@$(cat ec2_instance_public_ip)" >> $GITHUB_ENV
-    - run: echo "SSH_ARGS=$SSH_REMOTE $SSH_OPTS" >> $GITHUB_ENV
-    - run: echo $SSH_ARGS
-    - run: ssh $SSH_ARGS 'echo test'
-    - run: ssh $SSH_ARGS 'git clone https://github.com/infinyon/fluvio.git --depth 1'
+    - run: curl -sSf https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$GITHUB_SHA/ci_ng.sh | bash -xe
+    - run: $SSH_EXEC 'echo test'
+    - run: $SSH_EXEC 'git clone https://github.com/infinyon/fluvio.git --depth 1'
     - if: always()
       run: aws ec2 terminate-instances --instance-ids $(cat ec2_instance_id)
