--- a/.github/workflows/ci_ng.yml
+++ b/.github/workflows/ci_ng.yml
@@ -25,7 +25,33 @@ jobs:
       EC2_AMI: ami-0a3bb968cc36aa314
     steps:
     - run: curl -sSf https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$GITHUB_SHA/ci_ng.sh | bash
-    - run: $SSH_EXEC "echo test"
     - run: $SSH_EXEC "git clone https://github.com/infinyon/fluvio.git --depth 1"
+    - run: $SSH_EXEC "cargo make check-format"
+    - run: $SSH_EXEC "cargo make clippy"
+    - run: $SSH_EXEC "make build-all-test"
+    - run: $SSH_EXEC "make run-all-unit-test"
+    - run: $SSH_EXEC "make make run-all-doc-test"
+    - run: $SSH_EXEC "helm version"
+    - run: $SSH_EXEC "minikube version"
+    - run: $SSH_EXEC "minikube start --driver=docker --kubernetes-version 1.19.6"
+    - run: sleep 30
+    - run: $SSH_EXEC "minikube profile list"
+    - run: $SSH_EXEC "minikube status"
+    - run: $SSH_EXEC "make RELEASE=release build_test"
+    - run: $SSH_EXEC "target/release/fluvio cluster start --setup --local --develop"
+    - run: $SSH_EXEC "target/release/fluvio version"
+    - run: $SSH_EXEC "make RELEASE=true UNINSTALL=noclean smoke-test-tls-root"
+    - run: $SSH_EXEC "examples/tests/build.sh --release"
+    - run: $SSH_EXEC "examples/tests/run.sh --release"
+    - run: $SSH_EXEC "minikube delete"
+    - run: $SSH_EXEC "minikube start --driver=docker --kubernetes-version 1.19.6"
+    - run: $SSH_EXEC "nohup  minikube tunnel --alsologtostderr > /tmp/tunnel.out 2> /tmp/tunnel.out &"
+    - run: $SSH_EXEC "minikube profile list"
+    - run: $SSH_EXEC "minikube status"
+    - run: $SSH_EXEC "make RELEASE=release TARGET=x86_64-unknown-linux-musl build_test"
+    - run: $SSH_EXEC "make RELEASE=true TARGET=x86_64-unknown-linux-musl k8-setup"
+    - run: $SSH_EXEC "make RELEASE=true minikube_image"
+    - run: $SSH_EXEC "make RELEASE=true minikube_image"
+    - run: $SSH_EXEC "make RELEASE=true TARGET=x86_64-unknown-linux-musl UNINSTALL=noclean smoke-test-k8-tls-root"
     - if: always()
       run: aws ec2 terminate-instances --instance-ids $EC2_INSTANCE_ID
